--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
-              ><b class="fs-5 fw-bold">➔ E-Mail*</b><br />
+              ><b class="fs-5 fw-bold"> E-Mail*</b><br />
               <input
                 type="text"
                 id="email"
@@ -110,7 +110,7 @@
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
-              ><b class="fs-5 fw-bold">➔ Full Name*</b><br />
+              ><b class="fs-5 fw-bold"> Full Name*</b><br />
               <p class="">This name will appear on the certificate.*</p>
               <input
                 type="text"
@@ -126,7 +126,7 @@
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
-              ><b class="fs-5 fw-bold">➔ Father's Name*</b><br />
+              ><b class="fs-5 fw-bold"> Father's Name*</b><br />
 
               <input
                 type="text"
@@ -142,7 +142,7 @@
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
-              ><b class="fs-5 fw-bold">➔ Mother's Name*</b><br />
+              ><b class="fs-5 fw-bold"> Mother's Name*</b><br />
 
               <input
                 type="text"
@@ -158,7 +158,7 @@
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
-              ><b class="fs-5 fw-bold">➔ Date Of Birth*</b><br />
+              ><b class="fs-5 fw-bold"> Date Of Birth*</b><br />
 
               <input
                 type="date"
@@ -174,7 +174,7 @@
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
-              ><b class="fs-5 fw-bold">➔ Course*</b><br />
+              ><b class="fs-5 fw-bold"> Course*</b><br />
 
               <input
                 type="text"
@@ -190,7 +190,7 @@
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
-              ><b class="fs-5 fw-bold">➔ Batch Time*</b><br />
+              ><b class="fs-5 fw-bold"> Batch Time*</b><br />
 
               <input type="checkbox" id="email" class="mt-3" />
               Morning<br />
@@ -204,7 +204,7 @@
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
-              ><b class="fs-5 fw-bold">➔ Mobile Number *</b><br />
+              ><b class="fs-5 fw-bold"> Mobile Number *</b><br />
               <p class="">
                 It should be 10 digits long and contain only numbers.
               </p>
@@ -222,7 +222,7 @@
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
-              ><b class="fs-5 fw-bold">➔ Full Address*</b><br />
+              ><b class="fs-5 fw-bold"> Full Address*</b><br />
 
               <input
                 type="text"
@@ -238,7 +238,7 @@
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
-              ><b class="fs-5 fw-bold">➔ Passport Size Photo *</b><br />
+              ><b class="fs-5 fw-bold"> Passport Size Photo *</b><br />
               <p class="mt-3">Upload 1 supported file: image. Max 1 MB.</p>
               <botton class="text-red btn btn-outline-primary">
                 Add File
