--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="./css/bootstrap.css" />
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Sofia&family=Yatra+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container bg-light">
