--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SRG Certificate</title>
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/Screenshot 2025-01-14 114531.png" />
     <link rel="stylesheet" href="./css/bootstrap.css" />
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Sofia&family=Yatra+One&display=swap" rel="stylesheet">
+  </head>
   </head>
   <body>
     <div class="container bg-light">
@@ -92,11 +93,11 @@
         </div>
       </div>
 
-      <div class="container bg-light mt-4 rounded shadow-lg pt-5 pb-5">
+      <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
-              ><b class="fs-5 fw-bold"> E-Mail*</b><br />
+              ><b class="fs-5 fw-bold">E-Mail*</b><br />
               <input
                 type="text"
                 id="email"
@@ -107,7 +108,7 @@
           </li>
         </ul>
       </div>
-      <div class="container bg-light mt-4 rounded shadow-lg pt-5 pb-5">
+      <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
@@ -123,7 +124,7 @@
           </li>
         </ul>
       </div>
-      <div class="container bg-light mt-4 rounded shadow-lg pt-5 pb-5">
+      <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
@@ -139,7 +140,7 @@
           </li>
         </ul>
       </div>
-      <div class="container bg-light mt-4 rounded shadow-lg pt-5 pb-5">
+      <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
@@ -155,7 +156,7 @@
           </li>
         </ul>
       </div>
-      <div class="container bg-light mt-4 rounded shadow-lg pt-5 pb-5">
+      <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
@@ -171,7 +172,7 @@
           </li>
         </ul>
       </div>
-      <div class="container bg-light mt-4 rounded shadow-lg pt-5 pb-5">
+      <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
@@ -187,7 +188,7 @@
           </li>
         </ul>
       </div>
-      <div class="container bg-light mt-4 rounded shadow-lg pt-5 pb-5">
+      <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
@@ -201,7 +202,7 @@
           </li>
         </ul>
       </div>
-      <div class="container bg-light mt-4 rounded shadow-lg pt-5 pb-5">
+      <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
@@ -219,7 +220,7 @@
           </li>
         </ul>
       </div>
-      <div class="container bg-light mt-4 rounded shadow-lg pt-5 pb-5">
+      <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
@@ -235,7 +236,7 @@
           </li>
         </ul>
       </div>
-      <div class="container bg-light mt-4 rounded shadow-lg pt-5 pb-5">
+      <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
@@ -248,7 +249,7 @@
           </li>
         </ul>
       </div>
-      <div class="container bg-light mt-4 rounded shadow-lg pt-5 pb-5">
+      <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email">
@@ -282,11 +283,11 @@
           </botton>
           <p class="mt-3">Page 1 of 1</p>
           <botton class="text-red btn btn-outline-primary h-50">
-            Clear Page
+            Reset
           </botton>
         </div>
         <p class="text-black-50 mt-3 ml-15">
-          Never submit passwords through Google Forms.
+         All Your Informations are safe for us.
         </p>
       </div>
     </div>
