--- a/index.html
+++ b/index.html
@@ -276,13 +276,13 @@
           <input type="checkbox" />
           <span class="slider round"></span>
         </label>
-        Send me a copy of my responses.<br /><br />
+       terms & Conditions Are Allowed!<br /><br />
         <div class="d-flex gap-5 container-fluid">
           <botton class="text-light p-2 w-45 rounded bg-primary h-50">
             Submit
           </botton>
-          <p class="mt-3">Page 1 of 1</p>
-          <botton class="text-red btn btn-outline-primary h-50">
+         
+          <botton class="text-red p-2 w-45 rounded  h-50">
             Reset
           </botton>
         </div>
