--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             Submit
           </botton>
          
-          <botton class="text-red p-2 w-45 rounded  h-50">
+          <botton class="text-red p-2 w-45 rounded btn btn-outline-primary  h-50">
             Reset
           </botton>
         </div>
