--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <link rel="icon" href="/Screenshot 2025-01-14 114531.png" />
     <link rel="stylesheet" href="./css/bootstrap.css" />
     <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Sofia&family=Yatra+One&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Sofia&family=Yatra+One&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  </head>
+
   <body>
     <div class="container bg-light">
       <div class="img bg-light rounded">
@@ -21,73 +24,77 @@
       </div>
       <div class="container bg-light mt-4 rounded shadow-lg">
         <div class="h1 pt-5 text-center">
-          <h1 class="main-h1 fw-bold text-danger">
+          <h1 class="main-h1 fs-3 fw-bold text-danger">
             🎯 SRG Certificate Examination Form.🎯
           </h1>
-          <h4 class="sub-h1">Submission Guidelines and Instructions:</h4>
+          <h4 class="sub-h1 bold">Submission Guidelines and Instructions:</h4>
         </div>
         <div class="li">
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
-              <h4 class="li-h3 fw-bold">👉Exam & Certificate Fees - ₹300 :</h4>
-              <p class="li-p fs-5">
+              <h4 class="li-h3 bold fw-bold">
+                👉Exam & Certificate Fees - ₹300 :
+              </h4>
+              <p class="li-p bold">
                 Please ensure the exam fee is paid in full before the exam date
                 to complete your submission❗
               </p>
             </li>
             <li class="list-group-item">
-              <h4 class="li-h3 fw-bold">👉Exam Date and Time:</h4>
-              <p class="li-p fs-5">
+              <h4 class="li-h3 bold fw-bold">👉Exam Date and Time:</h4>
+              <p class="li-p bold bold">
                 The exam will be held on 18th January 2025. Please arrive at
                 least 15 minutes before the scheduled time.
               </p>
             </li>
             <li class="list-group-item">
-              <h4 class="li-h3 fw-bold">👉Submission Deadline:</h4>
-              <p class="li-p fs-5">
+              <h4 class="li-h3 bold fw-bold">👉Submission Deadline:</h4>
+              <p class="li-p bold">
                 All exam applications must be submitted before 17th January
                 2024. Late submissions will not be accepted.
               </p>
             </li>
             <li class="list-group-item">
-              <h4 class="li-h3 fw-bold">👉Retake Policy:</h4>
-              <p class="li-p fs-5">
+              <h4 class="li-h3 bold fw-bold">👉Retake Policy:</h4>
+              <p class="li-p bold bold">
                 In case of a failed exam, a retake fee may apply. Check the SRG
                 Computer Training Centre policies for more details.
               </p>
             </li>
             <li class="list-group-item">
-              <h4 class="li-h3 fw-bold">👉Certificate Awarding:</h4>
-              <p class="li-p fs-5">
+              <h4 class="li-h3 bold fw-bold">👉Certificate Awarding:</h4>
+              <p class="li-p bold bold">
                 Certificates will be awarded to successful candidates on 26th
                 January, Republic Day, during the Republic Day Celebration at
                 SRG Computer Training Institute.
               </p>
             </li>
             <li class="list-group-item">
-              <p class="li-p fs-5 mt-5">
+              <p class="li-p bold bold mt-5">
                 <b>👉NOTE:</b>
               </p>
-              <p class="li-p fs-5 text-danger">
+              <p class="li-p bold text-danger">
                 Ensure that you follow these guidelines to ensure a smooth and
                 successful certification process❗
               </p>
             </li>
             <li class="list-group-item">
-              <h4 class="li-h3 pb-5 pt-2">
+              <h4 class="li-h3 bold pb-5 pt-2">
                 <b> harshit7465@gmail.com</b><br /><br /><a
                   class="text-decoration-none m-3"
                   href="#"
                   >Switch Account</a
                 >
               </h4>
-              <p class="li-p fs-5 text-danger">
+              <p class="li-p bold bold text-danger">
                 The name, email, and photo associated with your Google account
                 will be recorded when you upload files and submit this form❗
               </p>
             </li>
             <li class="list-group-item">
-              <h4 class="li-h3 fw-bold pb-5">* Indicates required question</h4>
+              <h4 class="li-h3 bold fw-bold pb-5">
+                * Indicates required question
+              </h4>
             </li>
           </ul>
         </div>
@@ -97,7 +104,7 @@
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <label for="email"
-              ><b class="fs-5 fw-bold">E-Mail*</b><br />
+              ><b class="bold fw-bold">E-Mail*</b><br />
               <input
                 type="text"
                 id="email"
@@ -111,12 +118,12 @@
       <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            <label for="email"
-              ><b class="fs-5 fw-bold"> Full Name*</b><br />
+            <label for="full"
+              ><b class="bold fw-bold"> Full Name*</b><br />
               <p class="">This name will appear on the certificate.*</p>
               <input
                 type="text"
-                id="email"
+                id="full"
                 placeholder="Enter Your Full Name"
                 class="form-control border-0 border-bottom"
               />
@@ -127,12 +134,12 @@
       <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            <label for="email"
-              ><b class="fs-5 fw-bold"> Father's Name*</b><br />
+            <label for="name"
+              ><b class="bold fw-bold"> Father's Name*</b><br />
 
               <input
                 type="text"
-                id="email"
+                id="name"
                 placeholder="Enter Your Father's Name"
                 class="form-control border-0 border-bottom mt-3"
               />
@@ -143,12 +150,12 @@
       <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            <label for="email"
-              ><b class="fs-5 fw-bold"> Mother's Name*</b><br />
+            <label for="name-2"
+              ><b class="bold fw-bold"> Mother's Name*</b><br />
 
               <input
                 type="text"
-                id="email"
+                id="name-2"
                 placeholder="Enter Your Mother's Name"
                 class="form-control border-0 border-bottom mt-3"
               />
@@ -159,12 +166,12 @@
       <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            <label for="email"
-              ><b class="fs-5 fw-bold"> Date Of Birth*</b><br />
+            <label for="of"
+              ><b class="bold fw-bold"> Date Of Birth*</b><br />
 
               <input
                 type="date"
-                id="email"
+                id="of"
                 placeholder="Enter Your Father's Name"
                 class="form-control border-0 border-bottom mt-3"
               />
@@ -175,12 +182,12 @@
       <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            <label for="email"
-              ><b class="fs-5 fw-bold"> Course*</b><br />
+            <label for="course"
+              ><b class="bold fw-bold"> Course*</b><br />
 
               <input
                 type="text"
-                id="email"
+                id="course"
                 placeholder="Your Answer"
                 class="form-control border-0 border-bottom mt-3"
               />
@@ -191,12 +198,12 @@
       <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            <label for="email"
-              ><b class="fs-5 fw-bold"> Batch Time*</b><br />
+            <label for="batch"
+              ><b class="bold fw-bold"> Batch Time*</b><br />
 
-              <input type="checkbox" id="email" class="mt-3" />
+              <input type="checkbox" id="batch" class="mt-3" />
               Morning<br />
-              <input type="checkbox" id="email" class="mt-3" />
+              <input type="checkbox" id="batch" class="mt-3" />
               Evening
             </label>
           </li>
@@ -205,14 +212,14 @@
       <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            <label for="email"
-              ><b class="fs-5 fw-bold"> Mobile Number *</b><br />
+            <label for="number"
+              ><b class="bold fw-bold"> Mobile Number *</b><br />
               <p class="">
                 It should be 10 digits long and contain only numbers.
               </p>
               <input
                 type="Number"
-                id="email"
+                id="number"
                 placeholder="Enter Your Mo. Number"
                 class="form-control border-0 border-bottom mt-3"
               />
@@ -223,12 +230,12 @@
       <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            <label for="email"
-              ><b class="fs-5 fw-bold"> Full Address*</b><br />
+            <label for="address"
+              ><b class="bold fw-bold"> Full Address*</b><br />
 
               <input
                 type="text"
-                id="email"
+                id="address"
                 placeholder="Enter Your Full Address"
                 class="form-control border-0 border-bottom mt-3"
               />
@@ -239,8 +246,8 @@
       <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            <label for="email"
-              ><b class="fs-5 fw-bold"> Passport Size Photo *</b><br />
+            <label for="size"
+              ><b class="bold fw-bold"> Passport Size Photo *</b><br />
               <p class="mt-3">Upload 1 supported file: image. Max 1 MB.</p>
               <botton class="text-red btn btn-outline-primary">
                 Add File
@@ -252,8 +259,8 @@
       <div class="container mt-3 rounded shadow-lg pt-3 pb-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            <label for="email">
-              <b class="fs-5">💡Any Questions?</b><br />
+            <label for="size">
+              <b class="bold">💡Any Questions?</b><br />
               If you have any questions or need further clarification regarding
               the certification exam or the submission process, feel free to
               contact us at SRG Institute during office hours. We are happy to
@@ -276,18 +283,16 @@
           <input type="checkbox" />
           <span class="slider round"></span>
         </label>
-       terms & Conditions Are Allowed!<br /><br />
+        Terms & Conditions are Allowed!<br /><br />
         <div class="d-flex gap-5 container-fluid">
           <botton class="text-light p-2 w-45 rounded bg-primary h-50">
             Submit
           </botton>
-         
-          <botton class="text-red p-2 w-45 rounded btn btn-outline-primary  h-50">
-            Reset
-          </botton>
+          <p class="mt-3"></p>
+          <botton class="text-red btn btn-outline-primary h-50"> Reset </botton>
         </div>
         <p class="text-black-50 mt-3 ml-15">
-         All Your Informations are safe for us.
+          All Your Informations are safe for us.
         </p>
       </div>
     </div>
