--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             Submit
           </botton>
           <p class="mt-3"></p>
-          <botton class="text-red btn btn-outline-primary h-50"> Reset </botton>
+          <botton class="text-red btn btn-outline-primary h-50" onclick="alert('Submitted')"> Reset </botton>
         </div>
         <p class="text-black-50 mt-3 ml-15">
           All Your Informations are safe for us.
