--- a/index.html
+++ b/index.html
@@ -285,11 +285,11 @@
         </label>
         Terms & Conditions are Allowed!<br /><br />
         <div class="d-flex gap-5 container-fluid">
-          <botton class="text-light p-2 w-45 rounded bg-primary h-50">
+          <botton class="text-light p-2 w-45 rounded bg-primary h-50" onclick="alert('Submitted')">
             Submit
           </botton>
           <p class="mt-3"></p>
-          <botton class="text-red btn btn-outline-primary h-50" onclick="alert('Submitted')"> Reset </botton>
+          <botton class="text-red btn btn-outline-primary h-50" onclick="alert('Reset')"> Reset </botton>
         </div>
         <p class="text-black-50 mt-3 ml-15">
           All Your Informations are safe for us.
